syntax = "proto3";

package user;

message User {
  string id = 1;
  string accountId = 2;
  string name = 3;
  int32 YOB = 4;
  int32 verify = 5;
  string role = 6;
}


message UpdateUserRequest {
  string id = 1;
  optional string name = 2;
  optional int32 YOB = 3;
}

message GetUserRequest {
  string id = 1;
}

message UpdateUserResponse {
  bool success = 1;
  string message = 2;
  User data = 3;
  repeated string errors = 4;
}

message UserDetailResponse {
  bool success = 1;
  string message = 2;
  User data = 3;
}

message UsersResponse {
  bool success = 1;
  string message = 2;
  repeated User data = 3;
}

message CreateProfileRequest {
  string name = 1;
  string accountId = 2;
  int32 YOB = 3;
}

message CreateProfileResponse {
  bool success = 1;
  string message = 2;
  User data = 3;
  repeated string errors = 4;
}

service UserService {
  rpc GetUser(GetUserRequest) returns (UserDetailResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc CreateProfile(CreateProfileRequest) returns (CreateProfileResponse);
}
